fixed chats